Added updateSong and changes in songById with swagger-docs
